fix: update gap and width for section member

--- a/src/assets/styles/components/member-cards.css
+++ b/src/assets/styles/components/member-cards.css
@@ -1,5 +1,5 @@
 .member__card {
-	width: 13rem;
+	width: calc((131 / 10) * 1rem);
 	height: calc((206 / 10) * 1rem);
 }
 
